--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,92 @@
 {
-  "extends": "next/core-web-vitals"
+    "root": true,
+    "extends": [
+        "next/core-web-vitals",
+        "eslint:recommended"
+    ],
+    "globals": {
+        "JSX": true
+    },
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+        "@typescript-eslint"
+    ],
+    "rules": {
+        "eqeqeq": "error",
+        "comma-dangle": [
+            "error",
+            "always-multiline"
+        ],
+        "semi": [
+            "error",
+            "never"
+        ],
+        "eol-last": [
+            "error",
+            "always"
+        ],
+        "no-trailing-spaces": "error",
+        "no-multiple-empty-lines": [
+            "error",
+            {
+                "max": 1,
+                "maxEOF": 0,
+                "maxBOF": 0
+            }
+        ],
+        "@typescript-eslint/no-unused-vars": "error",
+        "indent": "off",
+        "@typescript-eslint/indent": [
+            "error"
+        ],
+        "no-use-before-define": "error",
+        "object-curly-spacing": [
+            "error",
+            "always"
+        ],
+        "no-unused-vars": [
+            "error",
+            {
+                "vars": "all",
+                "args": "all",
+                "ignoreRestSiblings": false,
+                "destructuredArrayIgnorePattern": "^_",
+                "argsIgnorePattern": "^_"
+            }
+        ],
+        "quotes": [
+            "error",
+            "single"
+        ],
+        "no-array-constructor": "error",
+        "jsx-quotes": [
+            "error",
+            "prefer-double"
+        ],
+        "no-console": [
+            "error",
+            {
+                "allow": [
+                    "warn",
+                    "error",
+                    "info"
+                ]
+            }
+        ],
+        "sort-imports": [
+            "error",
+            {
+                "ignoreCase": false,
+                "ignoreDeclarationSort": false,
+                "ignoreMemberSort": false,
+                "memberSyntaxSortOrder": [
+                    "none",
+                    "all",
+                    "multiple",
+                    "single"
+                ],
+                "allowSeparatedGroups": true
+            }
+        ]
+    }
 }
