--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
-  "name": "deep-in-table-tennis",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "20.1.0",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
-    "autoprefixer": "10.4.14",
-    "daisyui": "^2.51.6",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.1",
-    "next": "13.4.1",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
-  }
+    "name": "deep-in-table-tennis",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@prisma/client": "4.13.0",
+        "@tailwindcss/typography": "^0.5.9",
+        "@types/node": "20.1.0",
+        "@types/react": "18.2.6",
+        "@types/react-dom": "18.2.4",
+        "@typescript-eslint/eslint-plugin": "^5.59.2",
+        "@typescript-eslint/parser": "^5.59.2",
+        "autoprefixer": "10.4.14",
+        "classnames": "^2.3.2",
+        "daisyui": "^2.51.6",
+        "eslint": "8.40.0",
+        "eslint-config-next": "13.4.1",
+        "next": "13.4.1",
+        "postcss": "8.4.23",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "tailwindcss": "3.3.2",
+        "typescript": "5.0.4"
+    },
+    "devDependencies": {
+        "prisma": "^4.13.0"
+    }
 }
